# FiChess

./: CMakeLists.txt  LICENSE  README.md
include/: Boards.hpp  Engine.hpp
include/utility/: Piece.hpp
src/: Boards.cpp  Engine.cpp  main.cpp
